Reduced repos to 6 and tried adding Linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -21,17 +21,17 @@ projects:
   # sort_by options:
   #   - pushed
   #   - stars
-  limit: 9
+  limit: 6
   exclude:
     forks: true
     projects:
     # - repo-name
 
-# social_media:
+social_media:
   # behance: your_username
   # dribbble: your_username
   # facebook: your_username
-  # linkedin: your_username
+  linkedin: Nicholas_Liu
   # medium: @your_username
   # stackoverflow: your_user_id
   # telegram: your_username
